--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,22 @@
+html {
+  height: 100vh;
+}
+
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
+#content {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#texts {  
+}
+
 .text {
   font-family: 'Old Standard TT', serif;
   font-weight: 700;
@@ -5,4 +24,35 @@
   font-size: 72px;
   letter-spacing: -0.075em;
   text-transform: uppercase;
+  white-space: nowrap;
+}
+
+#help {
+  z-index: 1000;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-family: sans;
+}
+
+#ui {
+  display: none;
+  z-index: 2000;
+  position: absolute;
+  left: 40%;
+  top: 40%;
+  margin: auto 2em;
+  font-family: sans;
+}
+
+#token-id-form {
+  margin: auto;
+  padding: 1em;
+  background: #FFFFFF;
+  border: 2px solid grey;
+  border-radius: 0.25em;
+  box-shadow:  0.25em 0.25em 0.5em #444444;
 }
